Task - 16/Task - 16/vpc.tf
provider "aws" {
    profile = "default"
    region = "us-west-1"
}


resource "aws_vpc" "terraform-vpc" {
  cidr_block       = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags = {
    Name = "vpc1"
  }
}
